@@ -36,7 +36,7 @@ public class SimulationPresenter implements SimulationChangeListener {
     }
 
     private void clearGrid(GridPane mapGrid) {
-        mapGrid.getChildren().retainAll(mapGrid.getChildren().get(0)); // hack to retain visible grid lines
+        mapGrid.getChildren().retainAll(mapGrid.getChildren().getFirst()); // hack to retain visible grid lines
         mapGrid.getColumnConstraints().clear();
         mapGrid.getRowConstraints().clear();
     }
